Added first stylesheet objects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="subreddits">
     <ul>
-      <li class="my-subs"><strong>MY SKILLS <strong></li>
+      <li class="my-subs"><strong>MY SKILLS </strong></li>
       <li>-</li>
       <li>C/C++</li>
       <li>-</li>
@@ -38,7 +38,7 @@
         <li>references</li>
       </ul>
     </div>
-    <div class="profile-ops"></div>
+    <div class="profile-ops">
       <div>
         <ul>
           <li>brendan link</li>
@@ -47,6 +47,7 @@
           <li>logout</li>
         </ul>
       </div>
+    </div>
   </nav>
   <div id="main" class="grid-20-10-1">
     <div>
